rustdocs/errors/rust-bitcoin-bitcoin-src-taproot-merkle_branch-borrowed.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:7:5
  |
7 | use super::{
  |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:1:5
  |
1 | use core::borrow::{Borrow, BorrowMut};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:4:5
  |
4 | use internals::slice::SliceExt;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
1 + extern crate internals;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:2:5
  |
2 | use core::slice;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `privacy_boundary::TaprootMerkleBranch`
 --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:5:9
  |
5 | pub use privacy_boundary::TaprootMerkleBranch;
  |         ^^^^^^^^^^^^^^^^^^-------------------
  |         |                 |
  |         |                 help: a similar name exists in the module: `TaprootMerkleBranchBuf`
  |         no `TaprootMerkleBranch` in `privacy_boundary`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:16:5
   |
16 |     internals::transparent_newtype! {
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:74:26
   |
74 | ...e<Write: io::Write + ?Sized>(&self, writer: &mut Write) -> io::Result...
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
74 -     pub fn encode<Write: io::Write + ?Sized>(&self, writer: &mut Write) -> io::Result<usize> {
74 +     pub fn encode<Write: i8::Write + ?Sized>(&self, writer: &mut Write) -> io::Result<usize> {
   |
help: consider importing this module
   |
 1 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:74:76
   |
74 | ...rite) -> io::Result<usize> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
74 -     pub fn encode<Write: io::Write + ?Sized>(&self, writer: &mut Write) -> io::Result<usize> {
74 +     pub fn encode<Write: io::Write + ?Sized>(&self, writer: &mut Write) -> i8::Result<usize> {
   |
help: consider importing this module
   |
 1 + use std::io;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:151:10
    |
151 | impl<'a> TryFrom<&'a [TapNodeHash]> for &'a TaprootMerkleBranch {
    |          ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
  1 + use std::convert::TryFrom;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
   --> ../rust-bitcoin/bitcoin/src/taproot/merkle_branch/borrowed.rs:242:6
    |
242 | impl alloc::borrow::ToOwned for TaprootMerkleBranch {
    |      ^^^^^ use of unresolved module or unlinked crate `alloc`
    |
    = help: add `extern crate alloc` to use the `alloc` crate
help: consider importing this module
    |
  1 + use std::borrow;
    |
help: if you import `borrow`, refer to it directly
    |
242 - impl alloc::borrow::ToOwned for TaprootMerkleBranch {
242 + impl borrow::ToOwned for TaprootMerkleBranch {
    |

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
